Revert "Using fastlane on CI"
This reverts commit 0f63056a93404d2dd2e39acdb38e710347194dfb.

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: fastlane build
+      run: swift build -v
+    - name: Run tests
+      run: swift test -v
